# Autocuts

./: .gitignore  .gitmodules  AutoCut.sln  AutoCut.vcxproj  AutoCut.vcxproj.filters  CMakeLists.txt  README.md  autocut_shortcuts.txt
src/: ApplicationPipeline.cpp  ApplicationPipeline.h  ApplicationPipelineGroup.h  ApplicationPipelineStep.h  BBox.cpp  BBox.h  DataObject.cpp  DataObject.h  EigenTypes.h  Energy.cpp  Energy.h  EnergySymDir.cpp  EnergySymDir.h  FastNewton.cpp  Newton.cpp  Newton.h  PardisoSolver.cpp  PardisoSolver.h  Position.cpp  Position.h  Separation.cpp  Separation.h  Solver.cpp  Solver.h  SolverPlugin.cpp  SolverPlugin.cpp.rej  SolverPlugin.h  SolverWrapper.cpp  SolverWrapper.h  Utils.cpp  Utils.h  autodiff.h  main.cpp  svg_exporter.h  unionFind.h
